--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
-.card {
-  height: 60vh;
-  width: 95vh;
+card {
+  height: 65vh;
+  width: 115vh;
   position: relative;
   overflow: hidden;
   display: block;
@@ -15,7 +15,7 @@ video {
   width: 100%;
   margin: 5 5 5;
   border-radius: 4px;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 .form-control {
   border-radius: 4px;
@@ -24,26 +24,27 @@ video {
   font-family: "Lato", sans-serif;
   font-weight: bolder;
   color: #a8a5a0;
-  width: 60%;
-  margin: 10px 0px 0px 0px;
+
+  margin: 15px 0px 15px 0px;
 }
 #search-button {
   font-family: "Lato", sans-serif;
-  margin: 10px 0px 0px 0px;
+  margin: 15px 0px 15px 0px;
   border-radius: 4px;
 }
 #currentLocation {
   font-family: "Lato", sans-serif;
   font-size: 15px;
-  margin: 10px 0px 0px 5px;
+  margin: 15px 0px 15px 5px;
   border-radius: 4px;
 }
 
-h1 {
+.city {
   text-transform: uppercase;
-  padding-top: 30px;
   font-family: "Raleway", sans-serif;
-  font-size: 3em;
+  font-size: 48px;
+
+  margin-top: 7px;
 }
 
 #weather-description {
@@ -54,27 +55,38 @@ h1 {
   font-family: "Lato", sans-serif;
   font-size: 16px;
   margin: 0;
+  line-height: 1.2;
 }
 
-.weather {
-  font-size: 62px;
-  text-align: center;
-  border: 2px;
-  margin: 20px 10px;
+.card-text-right {
+  line-height: 1.2;
+  margin: 0;
+}
+
+.weatherEmoji {
+  float: right;
+  margin-top: 15px;
+  width: 130px;
 }
 
 .mainTemp {
-  font-size: 62px;
+  font-size: 58px;
+  font-family: "Raleway", sans-serif;
+  text-align: right;
 }
-.degree {
+.unit {
   font-size: 16px;
   font-weight: lighter;
   position: relative;
   top: -14px;
+  text-align: right;
 }
-
+.humidity {
+  text-align: center;
+  padding: 30px 0px 0px;
+}
 .week {
-  font-family: "Lato", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
   text-align: center;
 }
@@ -83,8 +95,8 @@ h1 {
   font-size: 11px;
 }
 hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 .emoji {
   font-size: 30px;
