--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ video {
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
   font-size: 48px;
-
+  font-weight: bold;
   margin-top: 7px;
 }
 
@@ -115,27 +115,33 @@ video {
   text-align: center;
   padding: 30px 0px 0px;
 }
-.week {
+.weekday {
   font-family: "Raleway", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
 }
 .weektemp {
   font-family: "Lato", sans-serif;
-  font-size: 11px;
+  font-size: 13px;
+}
+.weektemp-max {
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
+}
+.weektemp-min {
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
 }
 hr {
   margin-top: 25px;
   margin-bottom: 25px;
 }
-.emoji {
+.forecast-image {
   font-size: 30px;
 }
-.sun {
-  color: #e0a200;
-  font-size: 30px;
-}
+
 footer {
+  font-size: 12px;
   text-align: center;
   padding-top: 20px;
 }
