--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ video {
 .city {
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
-  font-size: 48px;
+  font-size: 2.5em;
   font-weight: bold;
   margin-top: 7px;
 }
